Fixed tooltip popover close button being too close to the edge of the tooltip

--- a/app/scss/brands/maytag/_app-main-mt.scss
+++ b/app/scss/brands/maytag/_app-main-mt.scss
@@ -48,6 +48,7 @@ header.header-desktop {
 		}
 	}
 	.extra-info-wrap {
+		margin-left: -5px;
 		display: block;
         text-align: center;
         position: relative;
@@ -62,6 +63,7 @@ header.header-desktop {
 				width: 17px;
 				height: 17px;
 				z-index: 52;
+				margin-left: 4px;
 			}
 			.btn-icon {
 				position: absolute;
